--- a/templates/chat/search-result.hbs
+++ b/templates/chat/search-result.hbs
@@ -1,6 +1,7 @@
 <div class="search-chat {{cssClass}}">
   <h3>{{localize "FULLSEARCH.chat_intro"}}</h3>
   <div class="motif">{{localize "FULLSEARCH.chat_text"}}{{searchPattern}}</div>
+  <div class="btn-highlight"><button id="highlight" data-tooltip="FULLSEARCH.highlight_tooltip">{{localize "FULLSEARCH.highlight_button"}}</button></div>
   {{#if hasresults}}
     {{#if tooMuchResults}}
       {{localize "FULLSEARCH.too_much_results"}}
@@ -9,7 +10,8 @@
         <h4>{{localize "DOCUMENT.JournalEntryPages"}}</h4>
         <div>
           {{#each pageResultCollection as |page|}}
-          <div class="btn-search"><button id="ouvrirpage" class="ouvrir-page" data-journal-id="{{page.journalId}}" data-page-id="{{page.id}}" data-tooltip='Visualiser la page'>{{page.journalName}} - {{page.name}}</button></div>
+            {{page.journalName}}
+            - @UUID[JournalEntry.{{page.journalId}}.JournalEntryPage.{{page.id}}]<br />
           {{/each}}
         </div>
       {{/if}}
