--- a/templates/chat/search-result.hbs
+++ b/templates/chat/search-result.hbs
@@ -4,7 +4,7 @@
   <div class="btn-highlight"><button id="highlight" data-tooltip="FULLSEARCH.highlight_tooltip">{{localize "FULLSEARCH.highlight_button"}}</button></div>
   {{#if hasresults}}
     {{#if tooMuchResults}}
-      {{localize "FULLSEARCH.too_much_results"}}
+      {{localize "FULLSEARCH.too_many_results"}}
     {{else}}
       {{#if pageresults}}
         <h4>{{localize "DOCUMENT.JournalEntryPages"}}</h4>
