Add group by journal, toggle on/off, fix minor issues

--- a/css/fullsearch.css
+++ b/css/fullsearch.css
@@ -26,6 +26,9 @@
   margin: 5px;
   line-height: 18px;
 }
+.search_chat .journal {
+  margin: 10px 0 10px 0;
+}
 .search_dialog {
   font: 1.2em "garamondpro";
 }
