--- a/templates/chat/search-result.hbs
+++ b/templates/chat/search-result.hbs
@@ -1,7 +1,9 @@
-<div class="search-chat {{cssClass}}">
+<div class="search_chat {{cssClass}}">
   <h3>{{localize "FULLSEARCH.chat_intro"}}</h3>
   <div class="motif">{{localize "FULLSEARCH.chat_text"}}{{searchPattern}}</div>
-  <div class="btn-highlight"><button id="highlight" data-tooltip="FULLSEARCH.highlight_tooltip">{{localize "FULLSEARCH.highlight_button"}}</button></div>
+  <div class="btn-highlight">
+    <button id="highlight" data-tooltip="FULLSEARCH.{{#if highlighted}}highlighted_tooltip{{else}}unhighlighted_tooltip{{/if}}">{{#if highlighted}}{{localize "FULLSEARCH.highlighted_button"}}{{else}}{{localize "FULLSEARCH.unhighlighted_button"}}{{/if}}</button>
+  </div>
   {{#if hasresults}}
     {{#if tooMuchResults}}
       {{localize "FULLSEARCH.too_many_results"}}
@@ -9,25 +11,28 @@
       {{#if pageresults}}
         <h4>{{localize "DOCUMENT.JournalEntryPages"}}</h4>
         <div>
-          {{#each pageResultCollection as |page|}}
-            {{page.journalName}}
-            - @UUID[JournalEntry.{{page.journalId}}.JournalEntryPage.{{page.id}}]<br />
+          {{#each pageResultCollection as |journal|}}
+            <div class="journal">{{journal.journalName}}<br />
+              {{#each journal.pages as |page|}}
+                @UUID[JournalEntry.{{journal.journalId}}.JournalEntryPage.{{page.pageId}}]<br />
+              {{/each}}
+            </div>
           {{/each}}
         </div>
       {{/if}}
       {{#if actorresults}}
         <h4>{{localize "DOCUMENT.Actors"}}</h4>
         <div>
-          {{#each actorResultCollection as |actor|}}
-            @UUID[Actor.{{actor._id}}]<br />
+          {{#each actorResultCollection as |id|}}
+            @UUID[Actor.{{id}}]<br />
           {{/each}}
         </div>
       {{/if}}
       {{#if itemresults}}
         <h4>{{localize "DOCUMENT.Items"}}</h4>
         <div>
-          {{#each itemResultCollection as |item|}}
-            @UUID[Item.{{item._id}}]<br />
+          {{#each itemResultCollection as |id|}}
+            @UUID[Item.{{id}}]<br />
           {{/each}}
         </div>
       {{/if}}
