--- a/css/fullsearch.css
+++ b/css/fullsearch.css
@@ -26,9 +26,6 @@
   margin: 5px;
   line-height: 18px;
 }
-.search_chat .journal {
-  margin: 10px 0 10px 0;
-}
 .search_dialog {
   font: 1.2em "garamondpro";
 }
@@ -40,4 +37,25 @@
 }
 .search_dialog .dialog-buttons {
   padding-top: 15px;
+}
+.chatsearchbox {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  flex: 0 0 28px;
+  margin: 0 6px;
+  align-content: center;
+}
+.chatsearchbox .startsearch {
+  flex: 0;
+}
+.chatsearchbox .startsearch i.fas {
+  font-size: var(--font-size-20);
+  line-height: 28px;
+}
+.chatsearchbox input {
+  width: 250px;
+  margin: 3px;
+  background: rgba(255, 255, 245, 0.8);
 }
