--- a/templates/chat/search-result.hbs
+++ b/templates/chat/search-result.hbs
@@ -12,9 +12,10 @@
         <h4>{{localize "DOCUMENT.JournalEntryPages"}}</h4>
         <div>
           {{#each pageResultCollection as |journal|}}
-            <div class="journal">{{journal.journalName}}<br />
+            <div class="journal">
+              <div class="journal_name">{{journal.journalName}}</div>
               {{#each journal.pages as |page|}}
-                @UUID[JournalEntry.{{journal.journalId}}.JournalEntryPage.{{page.pageId}}]<br />
+                <div class="journal_page">@UUID[JournalEntry.{{journal.journalId}}.JournalEntryPage.{{page.pageId}}]</div>
               {{/each}}
             </div>
           {{/each}}
